// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExportApp /> renders as expected 1`] = `
<ExportApp
  initializeWorkpad={[Function]}
  selectedPageIndex={0}
  workpad={
    Object {
      "css": "",
      "id": "my-workpad-abcd",
      "pages": Array [
        Object {
          "elements": Array [
            0,
            1,
            2,
          ],
        },
        Object {
          "elements": Array [
            3,
            4,
            5,
            6,
          ],
        },
      ],
    }
  }
>
  <div
    className="canvasExport"
    data-shared-page={1}
  >
    <div
      className="canvasExport__stage"
    >
      <div
        className="canvasLayout__stageHeader"
      >
        <RoutingLink
          to="/workpad/my-workpad-abcd"
        >
          <div>
            Link
          </div>
        </RoutingLink>
      </div>
      <div
        className="canvasExport__stageContent"
        data-shared-items-count={3}
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "17hzfsv-ExportApp": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {},
              "sheet": StyleSheet {
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                  </style>
                </head>,
                "ctr": 0,
                "insertionPoint": undefined,
                "isSpeedy": true,
                "key": "css",
                "nonce": undefined,
                "prepend": undefined,
                "tags": Array [],
              },
            }
          }
          isStringTag={true}
          serialized={
            Object {
              "name": "17hzfsv-ExportApp",
              "next": undefined,
              "styles": ";label:ExportApp;",
            }
          }
        />
        <div
          className="canvasExport__stageContent css-17hzfsv-ExportApp"
          data-shared-items-count={3}
        >
          <WorkpadPage
            isSelected={true}
            registerLayout={[Function]}
            unregisterLayout={[Function]}
          >
            <div>
              Page
            </div>
          </WorkpadPage>
        </div>
      </div>
    </div>
  </div>
</ExportApp>
`;

exports[`<ExportApp /> renders as expected 2`] = `
<ExportApp
  initializeWorkpad={[Function]}
  selectedPageIndex={1}
  workpad={
    Object {
      "css": "",
      "id": "my-workpad-abcd",
      "pages": Array [
        Object {
          "elements": Array [
            0,
            1,
            2,
          ],
        },
        Object {
          "elements": Array [
            3,
            4,
            5,
            6,
          ],
        },
      ],
    }
  }
>
  <div
    className="canvasExport"
    data-shared-page={2}
  >
    <div
      className="canvasExport__stage"
    >
      <div
        className="canvasLayout__stageHeader"
      >
        <RoutingLink
          to="/workpad/my-workpad-abcd"
        >
          <div>
            Link
          </div>
        </RoutingLink>
      </div>
      <div
        className="canvasExport__stageContent"
        data-shared-items-count={4}
      >
        <Insertion
          cache={
            Object {
              "insert": [Function],
              "inserted": Object {
                "17hzfsv-ExportApp": true,
              },
              "key": "css",
              "nonce": undefined,
              "registered": Object {},
              "sheet": StyleSheet {
                "_insertTag": [Function],
                "before": null,
                "container": <head>
                  <style
                    data-emotion="css"
                    data-s=""
                  >
                    
                  </style>
                </head>,
                "ctr": 0,
                "insertionPoint": undefined,
                "isSpeedy": true,
                "key": "css",
                "nonce": undefined,
                "prepend": undefined,
                "tags": Array [],
              },
            }
          }
          isStringTag={true}
          serialized={
            Object {
              "name": "17hzfsv-ExportApp",
              "next": undefined,
              "styles": ";label:ExportApp;",
            }
          }
        />
        <div
          className="canvasExport__stageContent css-17hzfsv-ExportApp"
          data-shared-items-count={4}
        >
          <WorkpadPage
            isSelected={true}
            registerLayout={[Function]}
            unregisterLayout={[Function]}
          >
            <div>
              Page
            </div>
          </WorkpadPage>
        </div>
      </div>
    </div>
  </div>
</ExportApp>
`;
